--- a/index.html
+++ b/index.html
@@ -451,61 +451,64 @@
             </div>
         </section>
 
-        <section id="customer-photo-reviews-carousel" class="py-16 md:py-20 bg-secondary">
-            <div class="container mx-auto px-6">
-                <h2 class="text-2xl md:text-3xl font-bold text-center mb-12 text-dark-red">รีวิวไถ่ถอนเสร็จ</h2>
-                <div class="relative max-w-4xl mx-auto carousel-container">
-                    <div id="photo-carousel-wrapper" class="carousel-wrapper">
-                        <div class="carousel-slide">
-                            <img src="P-GitHub/Review2/Rw1.png" alt="รีวิวรูปภาพลูกค้า 1">
-                        </div>
-                        <div class="carousel-slide">
-                            <img src="P-GitHub/Review2/Rw2.png" alt="รีวิวรูปภาพลูกค้า 2">
-                        </div>
-                        <div class="carousel-slide">
-                            <img src="P-GitHub/Review2/Rw3.png" alt="รีวิวรูปภาพลูกค้า 3">
-                        </div>
-                        <div class="carousel-slide">
-                            <img src="P-GitHub/Review2/Rw4.png" alt="รีวิวรูปภาพลูกค้า 4">
-                        </div>
-                        <div class="carousel-slide">
-                            <img src="P-GitHub/Review2/Rw5.png" alt="รีวิวรูปภาพลูกค้า 5">
-                        </div>
-                        <div class="carousel-slide">
-                            <img src="P-GitHub/Review2/Rw6.png" alt="รีวิวรูปภาพลูกค้า 6">
-                        </div>
-                        <div class="carousel-slide">
-                            <img src="P-GitHub/Review2/Rw7.png" alt="รีวิวรูปภาพลูกค้า 7">
-                        </div>
-                        <div class="carousel-slide">
-                            <img src="P-GitHub/Review2/Rw8.png" alt="รีวิวรูปภาพลูกค้า 8">
-                        </div>
-                        <div class="carousel-slide">
-                            <img src="P-GitHub/Review2/Rw9.png" alt="รีวิวรูปภาพลูกค้า 9">
-                        </div>
-                        <div class="carousel-slide">
-                            <img src="P-GitHub/Review2/Rw10.png" alt="รีวิวรูปภาพลูกค้า 10">
-                        </div>
-                        <div class="carousel-slide">
-                            <img src="P-GitHub/Review2/Rw11.png" alt="รีวิวรูปภาพลูกค้า 11">
-                        </div>
-                        <div class="carousel-slide">
-                            <img src="P-GitHub/Review2/Rw12.png" alt="รีวิวรูปภาพลูกค้า 12">
-                        </div>
-                        <div class="carousel-slide">
-                            <img src="P-GitHub/Review2/Rw13.png" alt="รีวิวรูปภาพลูกค้า 13">
-                        </div>
-                        <div class="carousel-slide">
-                            <img src="P-GitHub/Review2/Rw14.png" alt="รีวิวรูปภาพลูกค้า 14">
-                        </div>
-                        <div class="carousel-slide">
-                            <img src="P-GitHub/Review2/Rw15.png" alt="รีวิวรูปภาพลูกค้า 15">
-                        </div>
-                    <button id="prev-photo-slide" class="carousel-button prev">❮</button>
-                    <button id="next-photo-slide" class="carousel-button next">❯</button>
+<section id="customer-photo-reviews-carousel" class="py-16 md:py-20 bg-secondary">
+    <div class="container mx-auto px-6">
+        <h2 class="text-2xl md:text-3xl font-bold text-center mb-12 text-dark-red">รีวิวไถ่ถอนเสร็จ</h2>
+        <div class="relative max-w-4xl mx-auto carousel-container">
+            <div id="photo-carousel-wrapper" class="carousel-wrapper">
+                
+                <div class="carousel-slide">
+                    <img src="P-GitHub/Review2/Rw1.png" alt="รีวิวไถ่ถอนเสร็จ 1">
                 </div>
+                <div class="carousel-slide">
+                    <img src="P-GitHub/Review2/Rw2.png" alt="รีวิวไถ่ถอนเสร็จ 2">
+                </div>
+                <div class="carousel-slide">
+                    <img src="P-GitHub/Review2/Rw3.png" alt="รีวิวไถ่ถอนเสร็จ 3">
+                </div>
+                <div class="carousel-slide">
+                    <img src="P-GitHub/Review2/Rw4.png" alt="รีวิวไถ่ถอนเสร็จ 4">
+                </div>
+                <div class="carousel-slide">
+                    <img src="P-GitHub/Review2/Rw5.png" alt="รีวิวไถ่ถอนเสร็จ 5">
+                </div>
+                <div class="carousel-slide">
+                    <img src="P-GitHub/Review2/Rw6.png" alt="รีวิวไถ่ถอนเสร็จ 6">
+                </div>
+                <div class="carousel-slide">
+                    <img src="P-GitHub/Review2/Rw7.png" alt="รีวิวไถ่ถอนเสร็จ 7">
+                </div>
+                <div class="carousel-slide">
+                    <img src="P-GitHub/Review2/Rw8.png" alt="รีวิวไถ่ถอนเสร็จ 8">
+                </div>
+                <div class="carousel-slide">
+                    <img src="P-GitHub/Review2/Rw9.png" alt="รีวิวไถ่ถอนเสร็จ 9">
+                </div>
+                <div class="carousel-slide">
+                    <img src="P-GitHub/Review2/Rw10.png" alt="รีวิวไถ่ถอนเสร็จ 10">
+                </div>
+                <div class="carousel-slide">
+                    <img src="P-GitHub/Review2/Rw11.png" alt="รีวิวไถ่ถอนเสร็จ 11">
+                </div>
+                <div class="carousel-slide">
+                    <img src="P-GitHub/Review2/Rw12.png" alt="รีวิวไถ่ถอนเสร็จ 12">
+                </div>
+                <div class="carousel-slide">
+                    <img src="P-GitHub/Review2/Rw13.png" alt="รีวิวไถ่ถอนเสร็จ 13">
+                </div>
+                <div class="carousel-slide">
+                    <img src="P-GitHub/Review2/Rw14.png" alt="รีวิวไถ่ถอนเสร็จ 14">
+                </div>
+                <div class="carousel-slide">
+                    <img src="P-GitHub/Review2/Rw15.png" alt="รีวิวไถ่ถอนเสร็จ 15">
+                </div>
+
             </div>
-        </section>
+            <button id="prev-photo-slide" class="carousel-button prev">❮</button>
+            <button id="next-photo-slide" class="carousel-button next">❯</button>
+        </div>
+    </div>
+</section>
 
         <section id="service-area" class="py-16 md:py-20 bg-primary">
             <div class="container mx-auto px-6 text-center">
