--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                     </div>
                 </div>
                 <div class="text-center mt-12">
-                    <a href="https://lin.ee/4WGZnHX" target="_blank" class="inline-block btn-primary font-bold py-3 px-8 rounded-full text-lg shadow-lg">
+                    <a href="https://lin.ee/4WGZnHX" target="_blank" class="inline-block line-button font-bold py-3 px-8 rounded-full text-lg shadow-lg">
                         ส่งข้อมูลประเมินราคาทาง LINE
                     </a>
                 </div>
@@ -562,7 +562,7 @@
                                 <div class="ml-4">
                                     <p class="text-lg text-gray-100">สำหรับลูกค้าใหม่และลูกค้าเก่า เรามีโปรโมชั่นพิเศษที่น่าสนใจรอคุณอยู่</p>
                                 </div>
-                            <div class="mt-8 text-center">
+                            </div> <div class="mt-8 flex justify-center">
                             <a href="https://lin.ee/4WGZnHX" target="_blank" class="inline-block line-button font-bold py-3 px-8 rounded-full text-lg shadow-lg hover:shadow-xl transition-shadow">
                             <i class="fab fa-line mr-2"></i>
                             ส่งข้อมูลประเมินราคาทาง LINE
