--- a/index.html
+++ b/index.html
@@ -530,18 +530,12 @@
 
         <section id="privileges" class="py-16 md:py-20 bg-accent text-white">
             <div class="container mx-auto px-6">
-                <div class="md:flex md:items-center md:space-x-12">
-                    <div class="md:w-2/5 mb-8 md:mb-0 text-center">
-                        <img src="P-GitHub/Banner/Bn2.png" alt="สิทธิพิเศษบริการรับซื้อตั๋วจำนำทอง" class="rounded-lg shadow-xl w-full mb-6">
-                        <div class="mt-8 flex justify-center">
-                            <a href="https://lin.ee/4WGZnHX" target="_blank" class="inline-block line-button font-bold py-3 px-8 rounded-full text-lg shadow-lg hover:shadow-xl transition-shadow">
-                                <i class="fab fa-line mr-2"></i>
-                                ส่งข้อมูลประเมินราคาทาง LINE
-                            </a>
-                        </div>
+                <h2 class="text-2xl md:text-3xl font-bold text-center mb-12">สิทธิพิเศษที่คุณจะได้รับ</h2>
+                <div class="max-w-5xl mx-auto flex flex-col md:flex-row md:items-center justify-center relative vertical-divider">
+                    <div class="md:w-1/2 flex justify-center mb-8 md:mb-0 md:pr-6">
+                        <img src="P-GitHub/Banner/Bn2.png" alt="สิทธิพิเศษบริการรับซื้อตั๋วจำนำทอง" class="rounded-lg shadow-xl w-full max-w-sm md:max-w-none">
                     </div>
-                    <div class="md:w-3/5">
-                        <h2 class="text-2xl md:text-3xl font-bold mb-8">สิทธิพิเศษที่คุณจะได้รับ</h2>
+                    <div class="md:w-1/2 md:pl-6">
                         <div class="space-y-6">
                             <div class="flex items-start">
                                 <div class="flex-shrink-0">
@@ -569,6 +563,12 @@
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="text-center mt-12">
+                    <a href="https://lin.ee/4WGZnHX" target="_blank" class="inline-block line-button font-bold py-3 px-8 rounded-full text-lg shadow-lg hover:shadow-xl transition-shadow">
+                        <i class="fab fa-line mr-2"></i>
+                        ส่งข้อมูลประเมินราคาทาง LINE
+                    </a>
                 </div>
             </div>
         </section>
