--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                         </div>
                         <p class="text-gray-600 mb-4 flex-grow">รวดเร็วทันใจบริการดีมากครับ เล็กๆน้อยๆพี่เขาก็มาปิดให้ถึงที่เลยครับ</p>
                         <div class="flex items-center mt-auto">
-                            <img src="P-GitHub/Photo/Photo/P-1.png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                            <img src="P-GitHub/Photo/P-1.png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.อุดรธานี</p>
                         </div>
                     </div>
@@ -383,7 +383,7 @@
                         </div>
                         <p class="text-gray-600 mb-4 flex-grow">ไม่มีอะไรจะแนะนำครับ แต่จะขอบอกว่าขอบคุณจากใจในฐานะผู้ใช้บริการของพี่ครับ</p>
                         <div class="flex items-center mt-auto">
-                            <img src="P-GitHub/Photo/Photo/P-2.png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                            <img src="P-GitHub/Photo/P-2.png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.หนองบัวลำภู</p>
                         </div>
                     </div>
@@ -393,7 +393,7 @@
                         </div>
                         <p class="text-gray-600 mb-4 flex-grow">พนักงานน่ารัก พูดจาดีมากๆค่ะ</p>
                         <div class="flex items-center mt-auto">
-                            <img src="P-GitHub/Photo/Photo/P-3.png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                            <img src="P-GitHub/Photo/P-3.png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.ขอนแก่น</p>
                         </div>
                     </div>
@@ -403,7 +403,7 @@
                         </div>
                         <p class="text-gray-600 mb-4 flex-grow">ผู้จัดการสาขาบริการดีมาก พิสูจน์ทองให้ลูกค้ามั่นใจในทองคำของทางร้าน</p>
                         <div class="flex items-center mt-auto">
-                           <img src="P-GitHub/Photo/Photo/P-4.png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                           <img src="P-GitHub/Photo/P-4.png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.หนองคาย</p>
                         </div>
                     </div>
@@ -413,7 +413,7 @@
                         </div>
                         <p class="text-gray-600 mb-4 flex-grow">บริการดีเยี่ยม ให้คำแนะนำดีมากครับ</p>
                         <div class="flex items-center mt-auto">
-                           <img src="P-GitHub/Photo/Photo/P-5.png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                           <img src="P-GitHub/Photo/P-5.png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.สกลนคร</p>
                         </div>
                     </div>
@@ -423,7 +423,7 @@
                         </div>
                         <p class="text-gray-600 mb-4 flex-grow">ประทับใจมากครับ สะดวกและรวดเร็วมาก</p>
                         <div class="flex items-center mt-auto">
-                           <img src="P-GitHub/Photo/Photo/P-6.png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                           <img src="P-GitHub/Photo/P-6.png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.เลย</p>
                         </div>
                     </div>
@@ -433,7 +433,7 @@
                         </div>
                         <p class="text-gray-600 mb-4 flex-grow">ให้ราคาดีที่สุดเท่าที่เคยถามมาเลยค่ะ</p>
                         <div class="flex items-center mt-auto">
-                           <img src="P-GitHub/Photo/Photo/P-7.png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                           <img src="P-GitHub/Photo/P-7.png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.ชัยภูมิ</p>
                         </div>
                     </div>
@@ -443,7 +443,7 @@
                         </div>
                         <p class="text-gray-600 mb-4 flex-grow">บริการเป็นกันเองมากครับ ชอบมากๆ</p>
                         <div class="flex items-center mt-auto">
-                           <img src="P-GitHub/Photo/Photo/P-8.png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                           <img src="P-GitHub/Photo/P-8.png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.มหาสารคาม</p>
                         </div>
                     </div>
