--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                         <div class="flex text-yellow-400 mb-2">
                             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
                         </div>
-                        <p class="text-gray-600 mb-4 flex-grow">รวดเร็วทันใจบริการดีมากครับ เล็กๆน้อยๆพี่เขาก็มาปิดให้ถึงที่เลยครับ</p>
+                        <p class="text-gray-600 mb-4 flex-grow">รวดเร็วทันใจบริการดีมากค่ะ ทองชิ้นเล็กๆน้อยๆพี่เขาก็มาปิดให้ถึงที่เลยค่ะ</p>
                         <div class="flex items-center mt-auto">
                             <img src="P-GitHub/Photo/P-1.png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.อุดรธานี</p>
@@ -381,7 +381,7 @@
                         <div class="flex text-yellow-400 mb-2">
                             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
                         </div>
-                        <p class="text-gray-600 mb-4 flex-grow">ไม่มีอะไรจะแนะนำครับ แต่จะขอบอกว่าขอบคุณจากใจในฐานะผู้ใช้บริการของพี่ครับ</p>
+                        <p class="text-gray-600 mb-4 flex-grow">ไม่มีอะไรจะแนะนำค่ะ แต่จะขอบอกว่าขอบคุณจากใจในฐานะผู้ใช้บริการของพี่ค่ะ</p>
                         <div class="flex items-center mt-auto">
                             <img src="P-GitHub/Photo/P-2.png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.หนองบัวลำภู</p>
@@ -391,7 +391,7 @@
                         <div class="flex text-yellow-400 mb-2">
                             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
                         </div>
-                        <p class="text-gray-600 mb-4 flex-grow">พนักงานน่ารัก พูดจาดีมากๆค่ะ</p>
+                        <p class="text-gray-600 mb-4 flex-grow">พนักงานน่ารัก เป็นกันเองพูดจาดีมากๆค่ะ</p>
                         <div class="flex items-center mt-auto">
                             <img src="P-GitHub/Photo/P-3.png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.ขอนแก่น</p>
@@ -401,7 +401,7 @@
                         <div class="flex text-yellow-400 mb-2">
                             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
                         </div>
-                        <p class="text-gray-600 mb-4 flex-grow">ผู้จัดการสาขาบริการดีมาก พิสูจน์ทองให้ลูกค้ามั่นใจในทองคำของทางร้าน</p>
+                        <p class="text-gray-600 mb-4 flex-grow">ประทับใจในการบริการมากครับ พูดจาดี ให้คำแนะนำเยี่ยม แถมยังมาดูแลให้ถึงที่ สุดยอดครับ</p>
                         <div class="flex items-center mt-auto">
                            <img src="P-GitHub/Photo/P-4.png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.หนองคาย</p>
@@ -411,7 +411,7 @@
                         <div class="flex text-yellow-400 mb-2">
                             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
                         </div>
-                        <p class="text-gray-600 mb-4 flex-grow">บริการดีเยี่ยม ให้คำแนะนำดีมากครับ</p>
+                        <p class="text-gray-600 mb-4 flex-grow">มาไวและเร็ว ตรงเวลานัด บริการเยี่ยมค่ะ ใครมองหาร้านอยู่แนะนำเลยค่ะ ไม่ผิดหวังแน่นอน</p>
                         <div class="flex items-center mt-auto">
                            <img src="P-GitHub/Photo/P-5.png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.สกลนคร</p>
@@ -421,7 +421,7 @@
                         <div class="flex text-yellow-400 mb-2">
                             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
                         </div>
-                        <p class="text-gray-600 mb-4 flex-grow">ประทับใจมากครับ สะดวกและรวดเร็วมาก</p>
+                        <p class="text-gray-600 mb-4 flex-grow">ประทับใจมากค่ะ สะดวกและรวดเร็วมาก</p>
                         <div class="flex items-center mt-auto">
                            <img src="P-GitHub/Photo/P-6.png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.เลย</p>
@@ -441,7 +441,7 @@
                         <div class="flex text-yellow-400 mb-2">
                             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
                         </div>
-                        <p class="text-gray-600 mb-4 flex-grow">บริการเป็นกันเองมากครับ ชอบมากๆ</p>
+                        <p class="text-gray-600 mb-4 flex-grow">มาไวมากครับ ขนาดเป็นงานเล็กๆ น้อยๆ ยังสละเวลามาดูแลให้ถึงที่เลย บริการดีเยี่ยมจริงๆ ครับ</p>
                         <div class="flex items-center mt-auto">
                            <img src="P-GitHub/Photo/P-8.png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.มหาสารคาม</p>
