--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                     <h2 class="text-2xl md:text-3xl font-bold text-dark-red">เกี่ยวกับบริการของเรา</h2>
                 </div>
                 <div class="max-w-3xl mx-auto text-center text-gray-600 leading-relaxed space-y-4">
-                    <p><strong class="text-gray-800">Golden18udon</strong> คือ ร้านรับซื้อ-ขายตั๋วจำนำทองในเขตจังหวัดอุดรธานี ให้บริการรับซื้อตั๋วจำนำทองรูปพรรณ, ตั๋วจำนำทองคำแท่ง, ตั๋วจำนำเครื่องประดับทองคำ และสินทรัพย์มีค่าต่างๆ ด้วยราคายุติธรรม พร้อมบริการด้วยความจริงใจ โปร่งใส</p>
+                    <p><strong class="text-gray-800">Gold18udon</strong> คือ ร้านรับซื้อ-ขายตั๋วจำนำทองในเขตจังหวัดอุดรธานี ให้บริการรับซื้อตั๋วจำนำทองรูปพรรณ, ตั๋วจำนำทองคำแท่ง, ตั๋วจำนำเครื่องประดับทองคำ และสินทรัพย์มีค่าต่างๆ ด้วยราคายุติธรรม พร้อมบริการด้วยความจริงใจ โปร่งใส</p>
                     <p>เราเน้นให้บริการกับลูกค้าในพื้นที่และใกล้เคียง ที่ต้องการแปลงสินทรัพย์ให้เป็นเงินสดอย่างรวดเร็ว โดยยังคงความปลอดภัยและมั่นใจได้ในทุกขั้นตอน</p>
                 </div>
             </div>
