--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
 
         <section id="reviews" class="py-16 md:py-20 bg-primary">
             <div class="container mx-auto px-6">
-                <h2 class="text-2xl md:text-3xl font-bold text-center mb-12 text-dark-red">"เสียงตอบรับจากลูกค้า"</h2>
+                <h2 class="text-2xl md:text-3xl font-bold text-center mb-12 text-dark-red">เสียงตอบรับจากลูกค้า</h2>
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
                     <div class="bg-secondary p-6 rounded-lg shadow-md flex flex-col">
                         <div class="flex text-yellow-400 mb-2">
