--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                         </div>
                         <p class="text-gray-600 mb-4 flex-grow">ให้ราคาดีที่สุดเท่าที่เคยถามมาเลยค่ะ</p>
                         <div class="flex items-center mt-auto">
-                           <img src="P-GitHub/Photo/P-7.png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                           <img src="P-GitHub/Photo/P-7.jpg" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.ชัยภูมิ</p>
                         </div>
                     </div>
@@ -443,7 +443,7 @@
                         </div>
                         <p class="text-gray-600 mb-4 flex-grow">มาไวมากครับ ขนาดเป็นงานเล็กๆ น้อยๆ ยังสละเวลามาดูแลให้ถึงที่เลย บริการดีเยี่ยมจริงๆ ครับ</p>
                         <div class="flex items-center mt-auto">
-                           <img src="P-GitHub/Photo/P-8.png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                           <img src="P-GitHub/Photo/P-8.jpg" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.มหาสารคาม</p>
                         </div>
                     </div>
