--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
       gtag('config', 'G-BYFQE3NSDN');
 </script>
+
+    <meta name="google-site-verification" content="WhpyTZjpAsisZoPAhFK4qXWn3417jp5fHINUZuDuXdo" />
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
