--- a/index.html
+++ b/index.html
@@ -604,6 +604,16 @@
 
     </main>
 
+    <section id="policy-disclaimer" class="py-10 bg-secondary">
+        <div class="container mx-auto px-6 text-center">
+            <h3 class="text-lg font-semibold text-dark-red mb-3">ข้อมูลสำคัญ</h3>
+            <div class="max-w-3xl mx-auto text-xs text-gray-500 leading-relaxed">
+                <p>
+                    บริการของ Gold18udon คือการรับซื้อตั๋วจำนำทอง ซึ่งเป็นการซื้อขายทรัพย์สินตามราคาที่ตกลงกัน ไม่ใช่การให้บริการสินเชื่อส่วนบุคคลหรือการให้กู้ยืมเงิน ดังนั้นจึงไม่มีการกำหนดระยะเวลาการชำระคืนขั้นต่ำหรือสูงสุด, ไม่มีอัตราดอกเบี้ยต่อปี (APR), และไม่มีค่าใช้จ่ายอื่นๆ ที่เกี่ยวข้องกับสินเชื่อส่วนบุคคลตามนโยบายของ Google
+                </p>
+            </div>
+        </div>
+    </section>
     <footer id="contact" class="bg-black text-gray-400">
         <div class="container mx-auto px-6 py-12 text-center">
             <h3 class="text-2xl font-bold text-white mb-4">ติดต่อเรา</h3>
